src/main/java/com/example/paymenttransfer/errors/InvalidTransferException.java
package com.example.paymenttransfer.errors;

public class InvalidTransferException extends RuntimeException {
    public InvalidTransferException(String message) {
        super(message);
    }
}
